# engine-plugin-cocos2dx

./: .cocos-project.json  .gitignore  CMakeLists.txt  LICENSE  README  README.md
Classes/: AppDelegate.cpp  AppDelegate.h  FunapiTestScene.cpp  FunapiTestScene.h
Classes/funapi/: build_date.txt  funapi_build_config.h  funapi_downloader.cc  funapi_downloader.cpp  funapi_downloader.h  funapi_encryption.cc  funapi_encryption.h  funapi_manager.cc  funapi_manager.h  funapi_multicasting.cc  funapi_multicasting.h  funapi_network.cc  funapi_network.h  funapi_plugin.h  funapi_session.cc  funapi_session.cpp  funapi_session.h  funapi_socket.cpp  funapi_socket_win.cpp  funapi_std_allocator.h  funapi_tasks.cc  funapi_tasks.cpp  funapi_transport.cc  funapi_transport.h  funapi_utils.h  funapi_version.h  version.txt
Classes/funapi/distribution/: fun_dedicated_server_rpc_message.pb.h
Classes/funapi/management/: maintenance_message.pb.h
Classes/funapi/network/: fun_message.pb.h  ping_message.pb.h
Classes/funapi/service/: multicast_message.pb.h  redirect_message.pb.h
Classes/google/: config.h
Resources/: ca-bundle.crt
cocos2d/cocos/network/: CCDownloader-apple.mm  HttpAsynConnection-apple.m  HttpRequest.h
docker/ifunengine/: Dockerfile  build.bat  run.bat
docker/ifunengine/echo/: build.bat
docker/ifunengine/multicast-json/: MANIFEST.json
proj.android/: .cproject  .project  AndroidManifest.xml  build.gradle  build.xml  find_cc_files.sh  mkHelper.sh  settings.gradle
proj.android-studio/: gradle.properties  run_funapi_unittest.sh
proj.android-studio/app/: AndroidManifest.xml  build.gradle
proj.android-studio/app/jni/: Android.mk  Application.mk
proj.android-studio/app/jni/hellocpp/: unittest.cpp
proj.android-studio/app/jni/libsodium/lib/: libsodium.la
proj.android-studio/app/res/values/: strings.xml
proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/: Android.mk
proj.android/jni/: Android.mk
proj.android/jni/libsodium/lib/pkgconfig/: libsodium.pc
proj.android/res/values/: strings.xml
proj.ios_mac/funapi-plugin-cocos2dx-desktopTests/: funapi_plugin_cocos2dx_Tests.mm  funapi_plugin_cocos2dx_desktopTests.mm  funapi_plugin_cocos2dx_disableTests.mm  funapi_plugin_cocos2dx_inhouseTests.mm
proj.ios_mac/funapi-plugin-cocos2dx.xcodeproj/: project.pbxproj
proj.ios_mac/funapi-plugin-cocos2dx.xcodeproj/project.xcworkspace/xcshareddata/: funapi-plugin-cocos2dx.xccheckout  funapi-plugin-cocos2dx.xcscmblueprint
proj.ios_mac/funapi-plugin-cocos2dx.xcodeproj/xcshareddata/xcschemes/: funapi-plugin-cocos2dx-desktop.xcscheme  funapi-plugin-cocos2dx-mobile.xcscheme
proj.ios_mac/ios/: Info.plist
proj.ios_mac/ios/libprotobuf/include/google/protobuf/stubs/: atomicops.h
proj.ios_mac/mac/: Info.plist
proj.ios_mac/mac/libsodium/lib/: libsodium.18.dylib  libsodium.la
proj.ios_mac/mac/libsodium/lib/pkgconfig/: libsodium.pc
proj.ios_mac/mac/libzstd/lib/: libzstd.1.3.3.dylib
proj.win32/: funapi-plugin-cocos2dx.sln  funapi-plugin-cocos2dx.vcxproj  funapi-plugin-cocos2dx.vcxproj.filters  main.cpp
proj.win32/funapi-plugin-cocos2dx-Test/: funapi-plugin-cocos2dx-Test.vcxproj  funapi-plugin-cocos2dx-Test.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h  unittest.cpp  unittest_inhouse.cpp
proj.win32/funapi-plugin-googletest/: funapi-plugin-googletest.vcxproj  funapi-plugin-googletest.vcxproj.filters  unittest.cpp
proj.win32/libsodium-1.0.10/: .gitignore  libsodium.vcxproj
proj.win32/libsodium-1.0.10/builds/msvc/vs2010/libsodium/: libsodium.vcxproj  libsodium.vcxproj.filters
proj.win32/libsodium-1.0.10/builds/msvc/vs2012/libsodium/: libsodium.vcxproj  libsodium.vcxproj.filters
proj.win32/libsodium-1.0.10/builds/msvc/vs2013/libsodium/: libsodium.vcxproj  libsodium.vcxproj.filters
proj.win32/libsodium-1.0.10/builds/msvc/vs2015/libsodium/: libsodium.vcxproj  libsodium.vcxproj.filters
proj.win32/libsodium-1.0.10/src/libsodium/: Makefile.am
proj.win32/libsodium-1.0.10/src/libsodium/libsodium.xcodeproj/: project.pbxproj
proj.win32/libsodium-1.0.10/src/libsodium/libsodium.xcodeproj/project.xcworkspace/xcuserdata/junhyun.xcuserdatad/: UserInterfaceState.xcuserstate
proj.win32/libsodium-1.0.10/src/libsodium/libsodium.xcodeproj/xcuserdata/junhyun.xcuserdatad/xcschemes/: libsodium.xcscheme
proj.win32/protobuf-2.6.1/: .gitignore
proj.win32/protobuf-2.6.1/vsprojects/: libprotobuf.vcxproj
proto/: build-protobuf-mac.sh  build-protobuf-win.bat  protoc  protoc-mac.sh  protoc-win.bat
src/: CMakeLists.txt  funapi_downloader.cc  funapi_network.cc  funapi_network.h  funapi_network_tester.cc  pbuf_echo.pb.cc  pbuf_echo.pb.h
src/funapi/network/: fun_message.pb.cc  fun_message.pb.h
